--- a/client/app/src/main/res/layout/activity_main3.xml
+++ b/client/app/src/main/res/layout/activity_main3.xml
@@ -10,13 +10,28 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="197dp"
-        android:layout_marginEnd="159dp"
-        android:layout_marginStart="137dp"
-        android:layout_marginTop="266dp"
-        android:text="Get Event"
+        android:layout_marginTop="30dp"
+        android:onClick="Refresh"
+        android:text="@string/get_event"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/button3"></LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
