--- a/client/app/src/main/res/layout/welcom.xml
+++ b/client/app/src/main/res/layout/welcom.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.al_hussein.client.MainActivity">
+    tools:context="com.example.al_hussein.client.Welcom">
 
     <TextView
         android:id="@+id/textView"
