GUI Notification and Dialog

--- a/client/app/src/main/res/layout/notifications_fragment.xml
+++ b/client/app/src/main/res/layout/notifications_fragment.xml
@@ -4,4 +4,12 @@
     android:layout_height="match_parent"
     android:background="@color/backgroundfragment">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/notification_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    </android.support.v7.widget.RecyclerView>
+
 </LinearLayout>
