set IP server in first interface

--- a/client/app/src/main/res/layout/welcom.xml
+++ b/client/app/src/main/res/layout/welcom.xml
@@ -6,6 +6,23 @@
     android:layout_height="match_parent"
     tools:context="com.example.al_hussein.client.Welcom">
 
+    <EditText
+        android:id="@+id/editText_ip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="380dp"
+        android:ems="10"
+        android:hint="IP Server"
+        android:inputType="textPersonName"
+        android:text="192.168.1.111"
+        app:layout_constraintBottom_toTopOf="@+id/editText2"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.026" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
