--- a/client/app/src/main/res/layout/item_project.xml
+++ b/client/app/src/main/res/layout/item_project.xml
@@ -38,6 +38,7 @@
         android:layout_height="match_parent">
 
         <Button
+            android:id="@+id/Follow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
