--- a/client/app/src/main/res/layout/item_project.xml
+++ b/client/app/src/main/res/layout/item_project.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -39,11 +40,11 @@
 
         <Button
             android:id="@+id/Follow"
-            android:layout_width="wrap_content"
+            android:layout_width="125dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_call"
             android:text="Follow" />
+
 
     </LinearLayout>
 
