--- a/client/app/src/main/res/layout/dialog_notification.xml
+++ b/client/app/src/main/res/layout/dialog_notification.xml
@@ -5,6 +5,15 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center">
 
+    <TextView
+        android:id="@+id/Type"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="TextView"
+        android:textAppearance="@android:style/TextAppearance.Large" />
+
     <LinearLayout
         android:layout_marginTop="50dp"
         android:layout_width="match_parent"
@@ -14,23 +23,25 @@
         android:gravity="center_horizontal">
 
         <TextView
-            android:id="@+id/dialog_name_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Contact Name"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:textSize="24sp"
-            android:layout_marginTop="190dp"/>
-        <TextView
-            android:id="@+id/dialog_phone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Phone Number"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"/>
+            android:id="@+id/Author"
+            android:layout_width="266dp"
+            android:layout_height="84dp"
+            android:text="Author"
+            android:textAppearance="@android:style/TextAppearance.Large" />
 
+        <TextView
+            android:id="@+id/ProjectName"
+            android:layout_width="266dp"
+            android:layout_height="84dp"
+            android:text="Project Name"
+            android:textAppearance="@android:style/TextAppearance.Large" />
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="266dp"
+            android:layout_height="84dp"
+            android:text="date"
+            android:textAppearance="@android:style/TextAppearance.Large" />
     </LinearLayout>
 
 </RelativeLayout>
