--- a/client/app/src/main/res/layout/pagemain.xml
+++ b/client/app/src/main/res/layout/pagemain.xml
@@ -18,7 +18,7 @@
             android:id="@+id/tablayout_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/temp"
             app:tabGravity="fill"
             app:tabIndicatorColor="@color/colorAccent"
             app:tabMode="fixed"></android.support.design.widget.TabLayout>
