--- a/client/app/src/main/res/values/colors.xml
+++ b/client/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#2f2f2f</color>
     <color name="colorAccent">#52b7f8</color>
     <color name="backgroundfragment">#4c4848</color>
+    <color name="temp">#52b7f8</color>
 </resources>
