--- a/client/app/src/main/res/layout/dialog_notification.xml
+++ b/client/app/src/main/res/layout/dialog_notification.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="350dp"
     android:layout_height="wrap_content"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:background="@android:color/holo_red_dark">
 
     <TextView
-        android:gravity="center"
         android:id="@+id/Type"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:gravity="center"
         android:text="TextView"
-        android:textAppearance="@android:style/TextAppearance.Large" />
+        android:textAppearance="@android:style/TextAppearance.Medium" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,37 +25,92 @@
         android:orientation="vertical"
         android:padding="50dp">
 
-        <TextView
-            android:id="@+id/Author"
+        <LinearLayout
             android:layout_width="266dp"
             android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="Author"
-            android:textAppearance="@android:style/TextAppearance.Large"
-            android:textColor="#FFFFFF" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/ProjectName"
-            android:layout_width="266dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="Project Name"
-            android:textAppearance="@android:style/TextAppearance.Large"
-            android:textColor="#FFFFFF" />
+            <TextView
+                android:id="@+id/textDetails"
+                android:layout_width="225dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="text Details"
+                android:textAppearance="@android:style/TextAppearance.Small"
+                android:textColor="#FFFFFF" />
 
-        <TextView
-            android:id="@+id/date"
+            <TextView
+                android:id="@+id/details"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="details"
+                android:textAppearance="@android:style/TextAppearance.Small"
+                android:textColor="#FFFFFF" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="266dp"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="date"
-            android:textAppearance="@android:style/TextAppearance.Large"
-            android:textColor="#FFFFFF" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="225dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="Project Name :"
+                android:textAppearance="@android:style/TextAppearance.Small"
+                android:textColor="#FFFFFF" />
+
+            <TextView
+                android:id="@+id/projectName"
+                android:layout_width="266dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="Project Name"
+                android:textAppearance="@android:style/TextAppearance.Small"
+                android:textColor="#FFFFFF" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="266dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="date :"
+                android:textAppearance="@android:style/TextAppearance.Small"
+                android:textColor="#FFFFFF" />
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="266dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="date"
+                android:textAppearance="@android:style/TextAppearance.Small"
+                android:textColor="#FFFFFF" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
